# agent-sim-platform

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
agent_sim_platform/: __init__.py  __main__.py  cli.py  config.py  data_models.py
agent_sim_platform/algorithms/: __init__.py  base.py  families.py  registry.py
agent_sim_platform/analysis/: __init__.py  bottleneck.py  cost.py  training_cost.py
agent_sim_platform/benchmarks/: __init__.py  loader.py  registry.py
agent_sim_platform/calibration/: __init__.py  engine.py  fitting.py  metrics.py  report.py  residual.py
agent_sim_platform/hardware/: __init__.py  base.py  google.py  huawei.py  nvidia.py  offload_tiers.py  topologies.py
agent_sim_platform/models/: __init__.py  base.py  presets.py  registry.py
agent_sim_platform/profiling/: __init__.py  bridge.py  ingestors.py  layers.py  orchestrator.py
agent_sim_platform/reports/: __init__.py  json_reporter.py  markdown_reporter.py
agent_sim_platform/simulation/: __init__.py  capacity.py  cluster_capacity.py  engine.py  inference_serving.py  runner.py  (+2 more)
docs/: USAGE.md  adding-hardware.md  algorithms.md  architecture.md  benchmarks.md  calibration.md  data-models.md  inference-serving.md  profiling.md  training.md
examples/: compare_future_gpu.py  run_swe_agent.py  sweep_hardware.py
tests/: __init__.py  test_algorithms.py  test_benchmarks.py  test_calibration.py  test_capacity.py  test_cli.py  test_data_models.py  test_golden.py  test_hardware.py  test_inference_serving.py  test_profiling.py  test_simulation.py  test_topologies.py  test_training.py
(+27 files in other folders)
